# DesignPatterns_Rust

./: .gitignore  Cargo.toml  README.md
src/command/: main.rs
src/state/: main.rs
src/strategy/: main.rs
src/template/: main.rs
