[package]
name = "designpattern_rust"
version = "0.1.0"
authors = ["Toshiya Nakakura <nakakura@me.com>"]

[[bin]]
name = "command"
path = "src/command/main.rs"

[[bin]]
name = "state"
path = "src/state/main.rs"

[[bin]]
name = "strategy"
path = "src/strategy/main.rs"

[[bin]]
name = "template"
path = "src/template/main.rs"

[dependencies]
rand = "0.3"
